# enum-procs

./: Cargo.toml  README.md
src/: lib.rs
tests/: auto_from.rs  partial_eq_except_last.rs  partial_eq_variant_test.rs
