[package]
name = "enum-procs"
version = "0.1.1"
edition = "2021"

authors = ["artegoser"]
license = "MIT"
description = "Procedural macros for enums."
repository = "https://github.com/artegoser/enum-procs"
readme = "./README.md"
keywords = ["macro", "procedural", "enum", "proc-macro"]
categories = []

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = "2.0.59"
