[package]
name = "enum-procs"
version = "0.3.0"
edition = "2021"

authors = ["artegoser"]
license = "MIT"
description = "Useful enum macros."
repository = "https://github.com/artegoser/enum-procs"
readme = "./README.md"
keywords = ["macro", "procedural", "enum", "proc-macro"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = "2.0.59"
